--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pynput = "^1.8.1"
 pytesseract = "^0.3.13"
 pyautogui = "^0.9.54"
 playsound = "1.2.2"
+pywin32 = "^310"
 
 
 [tool.poetry.group.dev.dependencies]
